# beast-api-mongo

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/controllers/post/: postContrllers.cpp  postControllers.hpp
src/controllers/product/: ProductController.cpp  product_controller.hpp
src/controllers/user/: UserController.cpp  UserControllers.hpp
src/helper/: types.hpp
src/models/blog/: blogModel.cpp  blogModel.hpp
src/models/product/: Product.cpp  Product.hpp
src/models/user/: User.cpp  User.hpp
src/routes/mainRouter/: Router.hpp  router.cpp
src/routes/postRoute/: post_route.cpp  post_route.hpp
src/routes/products/: product_routes.cpp  product_routes.hpp
src/routes/users/: UserRouter.cpp  UserRouter.hpp
src/utils/: Base.hpp  Env.hpp  Logger.hpp
